tests/src/frontend/typechecking/invalid/overridable_grandparent2.sk
base class Foo {
  fun foo(): void {
    void
  }
}

base class Bar extends Foo

class Baz() extends Foo {
  fun foo(): void {
    void
  }
}
